--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Crimson+Text:wght@400;700&family=Montserrat+Alternates:wght@300;400;600&family=Ubuntu:wght@400;500;700&display=swap');
+
 *{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    background-color: red;
+
+    /* Google Fonts Here */
+    font-family: 'Crimson Text', serif;
+    font-family: 'Montserrat Alternates', sans-serif;
+    font-family: 'Ubuntu', sans-serif;
 }
