--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,159 @@
+/*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
+                                                     Font Import
+*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=**=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*/
+
+
+
+
+
+
+/*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
+                                                     Comman
+*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=**=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*/
 *{
-    padding: 0;
     margin: 0;
+    padding: 0;
     box-sizing: border-box;
-    background-color: red;
+}
+html {
+    font-size: 62.5%;
+    scroll-behavior: smooth;
+    overflow-x: hidden;
+  }
+
+body {
+    font-family: "Poppins", sans-serif;
+    position: relative;
+  }
+
+a {
+    text-decoration: none;
+    color:black;
+
+  }
+  
+li {
+    list-style: none;
+  }
+
+:root{
+    --adadad:#656565;
+    --blue:rgb(80, 126, 252);
+    --white:#fff;
+    --whiteBg:#f7f7f7;
+    --highlight:#ff781f;
+    --black:#212529;
+    --box-shadow: 0px 0px 30px 0px rgba(148,142,148,1);
+    --abhi:#7d7d7d;
+}
+
+.heading{
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    font-size:4rem;
+    margin:2rem 0;
+}
+.grid {
+    display: grid;
+  }
+  
+  .grid-two-col {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  
+  .grid-three-col {
+    grid-template-columns: repeat(3, 1fr);
+  }
+  
+  .grid-four-col {
+    grid-template-columns: repeat(4, 1fr);
+  }
+  
+  .grid-five-col {
+    grid-template-columns: repeat(5, 1fr);
+  }
+  
+  .grid-six-col {
+    grid-template-columns: repeat(6, 1fr);
+  }
+  
+  .grid-seven-col {
+    grid-template-columns: repeat(7, 1fr);
+  }
+  
+  .grid-eight-col {
+    grid-template-columns: repeat(8, 1fr);
+  }
+  
+  .grid-nine-col {
+    grid-template-columns: repeat(9, 1fr);
+  }
+.container{
+    padding: 0rem 5rem;
+}
+
+/*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
+                                                     NavBar
+*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=**=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*/
+header{
+    width: 100%;
+    background: transparent;
+    z-index: 10;
+}
+nav{
+    display:flex;
+    align-items:center;
+    justify-content:space-between;
+}
+.navList{
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    gap:2.5rem;
+    margin-right: 6rem;
+}
+.navList li{
+    font-size:1.8rem;
+}
+.navList li a{
+    color:var(--white);
+}
+.logo img{
+    height: 6rem;
+    margin-left: 6rem;
+}
+
+
+/*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
+                                                     hero section
+*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=**=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*/
+.heroSection{
+    width: 100%;
+    height: 100vh;
+    background:url(../Image/Frame\ 9.png) no-repeat center center/cover;
+    margin-top: -6.5rem;
+    z-index: -10;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+}
+.textBox{
+    z-index: 10;
+    margin-left: 65rem;
+}
+.textBox h2{
+    color:var(--white);
+    font-size: 5rem;
+}
+.btn{
+    width: 10rem;height: 4rem;
+    border:none;
+    background: var(--blue);
+    color: var(--white);
+    font-size: 1.8rem;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    margin-top: 1rem;
 }
