--- a/css/style.css
+++ b/css/style.css
@@ -1,25 +1,23 @@
-<<<<<<< HEAD
 /*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
                                                      Font Import
 *=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=**=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*/
 
+@import url('https://fonts.googleapis.com/css2?family=Crimson+Text:wght@400;700&family=Montserrat+Alternates:wght@300;400;600&family=Ubuntu:wght@400;500;700&display=swap');
 
 
 
 
 
 /*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-                                                     Comman
+                                                     Common
 *=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=**=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*/
-=======
-@import url('https://fonts.googleapis.com/css2?family=Crimson+Text:wght@400;700&family=Montserrat+Alternates:wght@300;400;600&family=Ubuntu:wght@400;500;700&display=swap');
 
->>>>>>> da8e6bc71d04bbf1bdd83e4c1e54f841f6fb5bf3
+
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-<<<<<<< HEAD
 }
 html {
     font-size: 62.5%;
@@ -162,11 +160,83 @@ nav{
     align-items:center;
     justify-content:center;
     margin-top: 1rem;
-=======
 
     /* Google Fonts Here */
     font-family: 'Crimson Text', serif;
     font-family: 'Montserrat Alternates', sans-serif;
     font-family: 'Ubuntu', sans-serif;
->>>>>>> da8e6bc71d04bbf1bdd83e4c1e54f841f6fb5bf3
+}
+
+
+/* Team Section */
+#team-members{
+  display: flex;
+  justify-content: space-around;
+  margin: 1rem 0;
+  padding: 1rem;
+}
+
+.team-card{
+  width: 25rem;
+  height: 40rem;
+  background-color: #fafafa;
+  box-shadow: 4px 5px 8px 0;
+  border-radius: .7rem;
+  padding: .6rem;
+
+
+}
+
+.member-image{
+  width: 15rem;
+  height: 15rem;
+  border-radius: 50%;
+  margin: 1rem auto;
+  background: url("../Image/Frame\ 9.png") ;
+}
+
+.member-image img{
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+
+.member-details{
+  font-family: 'Montserrat Alternates', sans-serif;
+  padding: 0 1rem ;
+
+
+
+}
+
+.member-details .name{
+  font-family: 'Ubuntu', sans-serif;
+  text-align: center;
+  font-size: 1.8rem;
+  
+}
+
+.member-details .member-bio{
+  margin: 1.5rem 0;
+  font-size: 1.2rem;
+  text-align: justify;
+}
+
+.team-card .member-btn{
+  margin: 1rem auto;
+  width: 10rem;
+}
+
+.member-btn button{
+  font-family: 'Crimson Text', serif;
+  padding: .4rem;
+  width: 10rem;
+  background-color: var(--black);
+  color: #f7f7f7;
+  font-size: 1.6rem;
+  border-radius: .4rem;
+  cursor: pointer;
+
 }
