--- a/css/style.css
+++ b/css/style.css
@@ -126,6 +126,7 @@ nav{
 .logo img{
     height: 6rem;
     margin-left: 6rem;
+    padding-top: 1rem;
 }
 
 
@@ -161,18 +162,14 @@ nav{
     justify-content:center;
     margin-top: 1rem;
 
-    /* Google Fonts Here */
-    font-family: 'Crimson Text', serif;
-    font-family: 'Montserrat Alternates', sans-serif;
-    font-family: 'Ubuntu', sans-serif;
 }
 
 
-/* Team Section */
+/* Team Section Starts Here*/
 #team-members{
   display: flex;
   justify-content: space-around;
-  margin: 1rem 0;
+  margin: 3rem 0;
   padding: 1rem;
 }
 
@@ -186,23 +183,21 @@ nav{
 }
 
 .member-image{
-  background: url("../Image/zendaya.jpg");
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
   width: 15rem;
   height: 15rem;
-  border-radius: 50%;
   margin: 1rem auto;
+}
+
+.member-image img{
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
 }
 
 
 .member-details{
   font-family: 'Montserrat Alternates', sans-serif;
   padding: 0 1rem ;
-
-
-
 }
 
 .member-details .name{
@@ -235,3 +230,44 @@ nav{
   border: none;
 
 }
+/* Team Section Ends Here*/
+
+
+/* Footer Starts Here */
+
+footer{
+  display: flex;
+  justify-content: space-between;
+  background-color: var(--black);
+  color: var(--white);
+  padding: 1rem 3.5rem;
+  margin-top: 3rem;
+}
+
+/* .pages{
+
+} */
+
+.footer-pages{
+  display: flex;
+
+}
+
+.footer-pages li{
+  list-style: none;
+  padding: 1rem 2rem;
+  font-size: 1.6rem;
+}
+
+footer .credit{
+  font-size: 1.6rem;
+  padding: 1rem;
+
+}
+
+.credit .heart{
+  color: red;
+  font-size: 2rem;
+}
+
+/* Footer Ends Here */
