--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 /*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
                                                      Font Import
 *=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=**=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*/
@@ -11,15 +10,11 @@
 /*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
                                                      Comman
 *=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=**=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*/
-=======
 @import url('https://fonts.googleapis.com/css2?family=Crimson+Text:wght@400;700&family=Montserrat+Alternates:wght@300;400;600&family=Ubuntu:wght@400;500;700&display=swap');
-
->>>>>>> da8e6bc71d04bbf1bdd83e4c1e54f841f6fb5bf3
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-<<<<<<< HEAD
 }
 html {
     font-size: 62.5%;
@@ -116,18 +111,20 @@ nav{
     display:flex;
     align-items:center;
     justify-content:center;
-    gap:2.5rem;
-    margin-right: 6rem;
+    gap:3rem;
+    margin-right: 10rem;
 }
 .navList li{
-    font-size:1.8rem;
+    font-size:1.5rem;
 }
 .navList li a{
     color:var(--white);
+    font-family: 'Montserrat Alternates', sans-serif;
 }
 .logo img{
-    height: 6rem;
+    height: 8rem;
     margin-left: 6rem;
+    padding-top:2rem;
 }
 
 
@@ -138,7 +135,7 @@ nav{
     width: 100%;
     height: 100vh;
     background:url(../Image/Frame\ 9.png) no-repeat center center/cover;
-    margin-top: -6.5rem;
+    margin-top: -8.5rem;
     z-index: -10;
     display:flex;
     align-items:center;
@@ -146,11 +143,13 @@ nav{
 }
 .textBox{
     z-index: 10;
-    margin-left: 65rem;
+    margin-left: 47rem;
 }
 .textBox h2{
     color:var(--white);
     font-size: 5rem;
+    font-family: 'Ubuntu', sans-serif;
+
 }
 .btn{
     width: 10rem;height: 4rem;
@@ -161,12 +160,9 @@ nav{
     display:flex;
     align-items:center;
     justify-content:center;
-    margin-top: 1rem;
-=======
+    margin-top:2.5rem;
+    border-radius: 8px;
 
     /* Google Fonts Here */
-    font-family: 'Crimson Text', serif;
-    font-family: 'Montserrat Alternates', sans-serif;
-    font-family: 'Ubuntu', sans-serif;
->>>>>>> da8e6bc71d04bbf1bdd83e4c1e54f841f6fb5bf3
+    /* font-family: 'Crimson Text', serif; */
 }
