--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 *=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=**=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*/
 
 @import url('https://fonts.googleapis.com/css2?family=Crimson+Text:wght@400;700&family=Montserrat+Alternates:wght@300;400;600&family=Ubuntu:wght@400;500;700&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=PT+Serif&display=swap');
 
 
 
@@ -58,6 +58,7 @@ li {
     justify-content:center;
     font-size:4rem;
     margin:2rem 0;
+    margin-top: 3rem;
 }
 .grid {
     display: grid;
@@ -97,6 +98,7 @@ li {
 .container{
     padding: 0rem 5rem;
 }
+
 
 /*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
                                                      NavBar
@@ -197,6 +199,89 @@ nav{
   margin-left: 2rem;
 }
 
+/*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
+                                                     Offer
+*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=**=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*/
+.prograsbar{
+  width: 80%;height: 5px;
+  background:var(--adadad);
+  margin-bottom:2rem;
+  margin-top: 1rem;
+  position: relative;
+}
+.offer{
+  padding-left: 10rem;
+}
+.offer label{
+  font-size:1.5rem;
+  font-weight: bold
+}
+.p-html::after{
+  content: "";
+  position: absolute;
+  left: 0;top: 0;
+  height: 100%;width:95%;
+  background: red;
+  }
+  .p-css::after{
+    content: "";
+    position: absolute;
+    left: 0;top: 0;
+    height: 100%;width:90%;
+    background: yellow;
+    }
+    .p-js::after{
+      content: "";
+      position: absolute;
+      left: 0;top: 0;
+      height: 100%;width:80%;
+      background: blue;
+      }
+      .p-db::after{
+        content: "";
+        position: absolute;
+        left: 0;top: 0;
+        height: 100%;width:75%;
+        background:skyblue;
+        }
+        .p-python::after{
+          content: "";
+          position: absolute;
+          left: 0;top: 0;
+          height: 100%;width:60%;
+          background:orange;
+          }
+          .p-ml::after{
+            content: "";
+            position: absolute;
+            left: 0;top: 0;
+            height: 100%;width:50%;
+            background: red;
+            }
+            .p-gd::after{
+              content: "";
+              position: absolute;
+              left: 0;top: 0;
+              height: 100%;width:95%;
+              background: blue;
+              }
+
+.right-offer{
+  padding-top: 3rem;
+}
+.right-offer h2{
+  font-size: 2rem;
+  margin-bottom:0.5rem;
+  font-family: 'PT Serif', serif;
+}
+.right-offer i{
+  margin-right: 1.2rem;
+}
+.right-offer p{
+  font-size: 1.5rem;
+  margin-bottom:1.5rem;
+  color: var(--abhi);
+}
 /* Team Section Starts Here*/
 #team-members{
   display: flex;
@@ -243,7 +328,9 @@ nav{
   margin: 1.5rem 0;
   font-size: 1.2rem;
   text-align: justify;
-  color:var(--abhi)
+  color:var(--abhi);
+  font-family: 'PT Serif', serif;
+font-weight: 400;
 }
 
 .team-card .member-btn{
