--- a/css/style.css
+++ b/css/style.css
@@ -271,6 +271,7 @@ nav{
 }
 .right-offer h2{
   font-size: 2rem;
+  font-weight: 600;
   margin-bottom:0.5rem;
   font-family: 'PT Serif', serif;
 }
