--- a/css/style.css
+++ b/css/style.css
@@ -332,17 +332,22 @@ nav{
   overflow: hidden;
   position: relative;
   box-shadow: 4px 5px 8px 0;
+  margin-bottom: 5rem;
 
+
+}.pro img{
+  width: 100%;height: 100%;
 
 }
 .overlay{
   position: absolute;
   width: 100%;height: 100%;
   top: 100%;left: 0;
-  background:rgba(0,0,0,0.5);
+  background:rgba(0, 0, 0, 0.5);
   transition: all 0.3s linear;
   font-size: 5rem;
   display:flex;
+  color:#fff;
   align-items:center;
   justify-content:center;
 }
