--- a/css/style.css
+++ b/css/style.css
@@ -142,7 +142,7 @@ nav{
 .heroSection{
     width: 100%;
     height: 103vh;
-    background:url(../Image/Frame\ 9.png) no-repeat center center/cover;
+    background:url(../Image/bg1.gif) no-repeat center center/cover;
     margin-top: -8.5rem;
     z-index: -10;
     display:flex;
